Fixed content overflow from hidden to auto

--- a/week1/css/style.css
+++ b/week1/css/style.css
@@ -2,7 +2,7 @@ html,
 body{
    width: 100%;
    min-height: 100%;
-   overflow: hidden;
+   overflow: auto;
    margin: 0;
 }
 body {
